syntax = "proto3";

package healthapp.v1;

option go_package = "github.com/atreya2011/health-management-api/internal/infrastructure/rpc/gen/healthapp/v1;healthappv1";

// Standard pagination request
message PageRequest {
  int32 page_size   = 1;  // Number of items per page (0 for default)
  int32 page_number = 2;  // Page number (1-based)
}

// Standard pagination response
message PageResponse {
  int32 total_items  = 1;
  int32 total_pages  = 2;
  int32 current_page = 3;
}
